src/style.scss
@import './reset.scss';

$primary: 'Helvetica';
$secondary: 'Helvetica';
$sans-serif-fallbacks: 'Helvetica Neue', helvetica, arial, sans-serif;
$color: hsl(0, 0%, 80%);
$color-hover: hsl(0, 0%, 50%);
$transition: color 400ms;

html {
  height: 100%;
}

body {
  box-sizing: border-box;
  display: grid;
  font-family: '#{$primary}', $sans-serif-fallbacks;
  font-size: 1.1rem;
  grid-auto-rows: auto 1fr;
  height: 100%;
}

a {
  color: inherit;
  text-decoration: underline;
  transition: $transition;

  &:hover {
    color: $color-hover;
  }

  .name &,
  &.icon {
    text-decoration: none;
  }
}

.header {
  left: 0;
  padding: 0.4rem;
  top: 0;
  width: 100vw;

  &-name {
    font-size: 1.6rem;
    font-weight: bold;
    line-height: 1;
    text-decoration: none;

    a {
      text-decoration: none;
    }
  }

  &-supporting {
    line-height: 1.4;
  }
}

.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  width: 30rem;

  &-top-links {
    display: inline-block;
  }

  .link {
    font-size: 1.2rem;
    margin-right: 0.3rem;
    text-decoration: none;
  }

  &-image {
    margin: 0.2rem 0;
    width: 100%;
  }

  &-image-caption {
    color: $color-hover;
    display: flex;
    font-size: 0.9rem;
    justify-content: flex-end;
  }
}

@media (min-width: 50rem) {
  .main {
    width: 48rem;
  }
}

@media (min-width: 70rem) {
  .main {
    width: 60rem;
  }
}

